# netwatchdog

./: .gitignore  README.md  pyproject.toml
config/: netwatchdog.example.yaml  periscan.example.yaml
deploy/: install.sh  netwatchdog.service  netwatchdog.sysusers  periscan.service  periscan.sysusers
netwatchdog/: cli.py  config.py
netwatchdog/database/: migrations.py  models.py  sync.py
netwatchdog/detector/: change_detector.py
netwatchdog/migrations/: 0001_initial_schema.sql
netwatchdog/notifier/: base.py  dispatcher.py  email_notifier.py  log_notifier.py
netwatchdog/scanner/: base.py  masscan_scanner.py  nmap_scanner.py  orchestrator.py
netwatchdog/scheduler/: jobs.py  manager.py
netwatchdog/utils/: ip_utils.py
periscan/: cli.py  config.py
periscan/database/: connection.py  migrations.py  models.py  sync.py
periscan/detector/: change_detector.py
periscan/migrations/: 0001_initial_schema.sql  0002_add_host_source.sql
periscan/notifier/: base.py  dispatcher.py  email_notifier.py  log_notifier.py
periscan/scanner/: masscan_scanner.py  nmap_scanner.py  orchestrator.py
periscan/scheduler/: jobs.py  manager.py
tests/unit/: test_change_detector.py  test_cli.py  test_config.py  test_database.py  test_ip_utils.py  test_models.py  test_notifier.py  test_scanner.py  test_scheduler.py  test_sync.py
