[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netwatchdog"
version = "0.1.0"
description = "Network port change monitoring system"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "python-nmap>=0.7.1",
    "SQLAlchemy>=2.0",
    "APScheduler>=3.10",
    "Flask>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "structlog>=24.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
netwatchdog = "netwatchdog.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["netwatchdog*"]

[tool.setuptools.package-data]
netwatchdog = ["migrations/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
